@@ -1,19 +1,19 @@
-# Copyright 2010-2017 Meik Michalke <meik.michalke@hhu.de>
+# Copyright 2010-2018 Meik Michalke <meik.michalke@hhu.de>
 #
-# This file is part of the R package koRpus.
+# This file is part of the R package koRpus.lang.es.
 #
-# koRpus is free software: you can redistribute it and/or modify
+# koRpus.lang.es is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
 # the Free Software Foundation, either version 3 of the License, or
 # (at your option) any later version.
 #
-# koRpus is distributed in the hope that it will be useful,
+# koRpus.lang.es is distributed in the hope that it will be useful,
 # but WITHOUT ANY WARRANTY; without even the implied warranty of
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 # GNU General Public License for more details.
 #
 # You should have received a copy of the GNU General Public License
-# along with koRpus.  If not, see <http://www.gnu.org/licenses/>.
+# along with koRpus.lang.es.  If not, see <http://www.gnu.org/licenses/>.
 
 
 # this is an internal file providing language support.
